start hooking up datacouch specific functionality

--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="/script/vm.js"></script>
   <script type="text/javascript" src="/script/deps-min.js"></script>  
   <script type="text/javascript" src="/script/util.js"></script>
+  <script type="text/javascript" src="/script/recline.js"></script>
   <script type="text/javascript" src="/script/okfnrecline.js"></script>
   <script type="text/javascript" src="/script/monocles.js"></script>
   <script type="text/javascript" src="/script/edit.js"></script>
@@ -48,9 +49,6 @@
   </div>
   
   <div id="notification-container">
-    <div id="notification">
-      <img src="/images/small-spinner.gif" class="notification-loader"><span id="notification-message">Loading...</span>
-    </div>
   </div>
     
   <div class="dialog-overlay" style="display: none; z-index: 101; ">&nbsp;</div>
