update table after csv upload

--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -51,8 +51,8 @@
   <div id="notification-container">
   </div>
     
-  <div class="dialog-overlay" style="display: none; z-index: 101; ">&nbsp;</div>
-  <div class="dialog" style="display: none">
+  <div class="datacouch-dialog-overlay" style="display: none; z-index: 101; ">&nbsp;</div>
+  <div class="datacouch-dialog" style="display: none">
     <div class="modal" style="position: relative; top: 50px; left: auto; margin: 0 auto; z-index: 102"></div>
   </div>
 
@@ -256,7 +256,7 @@
       </div>
       <div class="modal-footer">
         <input type="submit" class="btn primary ok" value="Update">
-        <a href="#/cancel!" class="btn secondary cancel">Cancel</a>
+        <a class="btn secondary cancel">Cancel</a>
       </div>
     </div>
   </script>
@@ -405,7 +405,7 @@
       </div>
       <div class="modal-footer">
         <input type="submit" class="btn primary ok" value="Fetch">
-        <a href="#/cancel!" class="btn secondary cancel">Cancel</a>
+        <a class="btn secondary cancel">Cancel</a>
       </div>
     </div>
   </script>
@@ -433,7 +433,7 @@
       </div>
       <div class="modal-footer">
         <input type="submit" class="btn primary ok" value="Import">
-        <a href="#/cancel!" class="btn secondary cancel">Cancel</a>
+        <a class="btn secondary cancel">Cancel</a>
       </div>
     </div>
   </script>
@@ -454,7 +454,7 @@
       </div>
       <div class="modal-footer">
         <input type="submit" class="btn primary ok" value="Upload">
-        <a href="#/cancel!" class="btn secondary cancel">Cancel</a>
+        <a class="btn secondary cancel">Cancel</a>
       </div>
     </div>
   </script>
@@ -475,7 +475,7 @@
       </div>
       <div class="modal-footer">
         <input type="submit" class="btn primary ok" value="Rename">
-        <a href="#/cancel!" class="btn secondary cancel">Cancel</a>
+        <a class="btn secondary cancel">Cancel</a>
       </div>
     </div>
   </script>
@@ -534,7 +534,7 @@
       </div>
       <div class="modal-footer">
         <input type="submit" class="btn primary ok" value="Update All">
-        <a href="#/cancel!" class="btn secondary cancel">Cancel</a>
+        <a class="btn secondary cancel">Cancel</a>
       </div>
     </div>
   </script>
@@ -599,7 +599,7 @@
       </div>
       <div class="modal-footer">
         <input type="submit" class="btn primary ok" value="Reproject">
-        <a href="#/cancel!" class="btn secondary cancel">Cancel</a>
+        <a class="btn secondary cancel">Cancel</a>
       </div>
     </div>
   </script>
@@ -667,7 +667,7 @@
       </div>
       <div class="modal-footer">
         <input type="submit" class="btn primary ok" value="Geocode All">
-        <a href="#/cancel!" class="btn secondary cancel">Cancel</a>
+        <a class="btn secondary cancel">Cancel</a>
       </div>
     </div>
   </script>
@@ -707,7 +707,7 @@
       </div>
       <div class="modal-footer">
         <input type="submit" class="btn primary ok" value="Import">
-        <a href="#/cancel!" class="btn secondary cancel">Cancel</a>
+        <a class="btn secondary cancel">Cancel</a>
       </div>
     </div>
   </script>
