--- a/attachments/index.html
+++ b/attachments/index.html
@@ -5,11 +5,16 @@
   <title>DataCouch</title>
   
   <link href="styles/styles.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="styles/graph.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="styles/detail.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="styles/legend.css" media="screen" rel="stylesheet" type="text/css" />
   
   <script src="script/jquery-1.6.1.min.js"></script>
   <script src="script/jquery.mustache.js"></script>
   <script src="script/crossfilter.js"></script>
-  <script src="script/d3.v2.js"></script>
+  <script src="script/d3.min.js"></script>
+  <script src="script/d3.layout.min.js"></script>
+  <script src="script/rickshaw.js"></script>
   <script src="script/underscore.js"></script>
   <script src="script/request.js"></script>
   <script src="script/dominode-filestream.js"></script>
@@ -28,10 +33,11 @@
       </div>
     </div>
     
-    <div id="wrapper">
+    <div id="wrapper"></div>
+    <div id="dataviz">
+      <div id="chart"></div>
     </div>
-    <div id="chart">
-    </div>
+    
   </div>
   
   <script type="text/mustache" class="uploadFormTemplate">
