add note about rewrite

--- a/attachments/index.html
+++ b/attachments/index.html
@@ -33,6 +33,8 @@
       </div>
     </div>
     
+    <p>DataCouch is currently being rewritten. <a href="http://github.com/maxogden/datacouch">Stay tuned</a></p>
+    
     <div id="wrapper"></div>
     <div id="dataviz">
       <div id="chart"></div>
