--- a/attachments/index.html
+++ b/attachments/index.html
@@ -32,6 +32,7 @@
     <p>DataCouch is currently being rewritten. <a href="http://github.com/maxogden/datacouch">Stay tuned</a></p>
     
     <div id="wrapper"></div>
+    <textarea></textarea><input class="transformButton" type="button" value="dooooo it"></input>
     <div id="dataviz">
       <div id="chart"></div>
     </div>
